fix calendar layout on mobile

--- a/src/View/ChatPages/calendarPage.css
+++ b/src/View/ChatPages/calendarPage.css
@@ -59,3 +59,17 @@
   > .month-input {
   width: 3.1rem;
 }
+
+@media (max-width: 1024px) {
+  #chat-page > div > #main > #calendar-page {
+    flex-direction: column;
+  }
+
+  #chat-page > div > #main > #calendar-page .month-grid-wrapper {
+    height: unset;
+  }
+
+  #chat-page > div > #main > #calendar-page .grid-pane-wrapper {
+    border-bottom: 1px solid var(--border);
+  }
+}
